updated openapi spec, regenrated code, added a uml diagram
