# api/swagger.yaml
@@ -1,11 +1,17 @@
 openapi: 3.0.0
 info:
   title: DPT
+  contact:
+    name: Oz Fraier
+    url: http://www.soficoop.com
+    email: oz@soficoop.com
   license:
     name: MIT
   version: 1.0.0
 servers:
 - url: http://dpt.soficoop.com/v1
+tags:
+- name: peace
 paths:
   /dialogs:
     get:
@@ -88,6 +94,308 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       x-swagger-router-controller: Dialogs
+  /dialogs/{dialogId}/messages:
+    get:
+      tags:
+      - messages
+      summary: List all messages
+      operationId: listMessages
+      parameters:
+      - name: limit
+        in: query
+        description: How many items to return at one time (max 100)
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
+          format: int32
+      - name: dialogId
+        in: path
+        description: The id of the dialog to retrieve
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        200:
+          description: An paged array of messages
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              style: simple
+              explode: false
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Messages'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Messages
+    post:
+      tags:
+      - dialogs
+      - messages
+      summary: Add a chat message
+      operationId: createMessage
+      parameters:
+      - name: dialogId
+        in: path
+        description: The id of the dialog to retrieve
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: content
+        in: header
+        description: The content of the message to create
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: senderID
+        in: header
+        description: The ID of the message sender
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: recipientID
+        in: header
+        description: The ID of the message recipient
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        201:
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Dialogs
+  /dialogs/{dialogId}/crisises:
+    post:
+      tags:
+      - dialogs
+      - crisis
+      summary: Start crisis mode
+      operationId: addCrisis
+      parameters:
+      - name: dialogId
+        in: path
+        description: The id of the dialog to retrieve
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: reason
+        in: header
+        description: The content of the message to create
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: starterID
+        in: header
+        description: The ID of the message sender
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: recipientID
+        in: header
+        description: The ID of the message recipient
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        201:
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Dialogs
+  /dialogs/{dialogId}/crisises/{crisisId}:
+    post:
+      tags:
+      - dialogs
+      - crisis
+      summary: Start crisis mode
+      operationId: setCrisisModeStatus
+      parameters:
+      - name: dialogId
+        in: path
+        description: The id of the dialog to retrieve
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: crisisId
+        in: path
+        description: The id of the crisis to retrieve
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: reason
+        in: header
+        description: The content of the message to create
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: starterID
+        in: header
+        description: The ID of the message sender
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: recipientID
+        in: header
+        description: The ID of the message recipient
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        201:
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Dialogs
+  /statements/{statementId}/requests:
+    post:
+      tags:
+      - statements
+      - request
+      summary: Request for statement
+      operationId: requestDialog
+      parameters:
+      - name: statementId
+        in: path
+        description: The id of the statement to retrieve
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: invitation
+        in: header
+        description: The content of the invitation
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: senderID
+        in: header
+        description: The ID of the message sender
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        201:
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Statements
+  /statements/{statementId}/requestes/{requestId}:
+    post:
+      tags:
+      - statements
+      - request
+      summary: Start request mode
+      operationId: setRequestStatus
+      parameters:
+      - name: statementId
+        in: path
+        description: The id of the statement to retrieve
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: requestId
+        in: path
+        description: The id of the request to retrieve
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: reason
+        in: header
+        description: The content of the message to create
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: starterID
+        in: header
+        description: The ID of the message sender
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: recipientID
+        in: header
+        description: The ID of the message recipient
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        201:
+          description: Null response
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Statements
   /sign-up/:
     post:
       tags:
@@ -126,6 +434,22 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/Dialog'
+    Message:
+      required:
+      - id
+      - name
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        tag:
+          type: string
+    Messages:
+      type: array
+      items:
+        $ref: '#/components/schemas/Message'
     Error:
       required:
       - code
